refactor: avoid Java 21 API to allow a Java 17 source floor
Replace the SequencedCollection `List.getFirst()` (Java 21) with the
equivalent `List.get(0)` so the source compiles on Java 17. Behavior is
identical: both return the first element of the resource property sources.